--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.12",
     "chart.js": "^4.5.0",
+    "firebase": "^12.1.0",
     "framer-motion": "^12.23.12",
     "install": "^0.13.0",
     "lucide-react": "^0.539.0",
